--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"devDependencies": {
+		"@playwright/test": "^1.52.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
 		"@storybook/addon-essentials": "^8.0.5",
 		"@storybook/addon-interactions": "^8.0.5",
@@ -15,6 +16,7 @@
 		"@storybook/react-webpack5": "^8.0.5",
 		"@storybook/test": "^8.0.5",
 		"@svgr/webpack": "^8.0.1",
+		"@types/node": "^22.15.17",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
@@ -78,7 +80,6 @@
 		]
 	},
 	"dependencies": {
-		"@playwright/test": "^1.52.0",
 		"clsx": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
